# Development

./: ImageRectification.cpp  README.md  out_camera_data_0.xml  out_camera_data_1.xml  test_infrared_flip.xcf
BosonImageAcquisition/: CMakeLists.txt  GetBosonImage.cpp
CamTriggerShellScript/: TriggerCams.sh  file1  wordcam0  wordcam1  wordcam2
CamTriggerShellScript/CharacterisationTest/: 100c100cmcam0  100c100cmcam1  100c150cmcam0  100c150cmcam1  100c200cmcam0  100c200cmcam1  100c250cmcam0  100c250cmcam1  100c50cmcam0  (+46 more)
GetBoson/: CMakeCache.txt  CMakeLists.txt  GetBoson  GetBoson.cbp  Makefile  cmake_install.cmake  getboson.cpp  main.cpp
GetBoson/libuvc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libuvcTargets.cmake
GetBoson/libuvc/src/: stream.c
GetBosonOneShot/: CMakeCache.txt  CMakeLists.txt  GetBosonOneShot  Makefile  PlotAvPix.py  cmake_install.cmake  getbosononeshot.cpp
ImageCapture/: CMakeCache.txt  CMakeLists.txt  ImageCapture  ImageCapture.cpp  Makefile  cmake_install.cmake
ImageDisplay/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake  image_rectification.cpp
LibuvcExample/: CMakeCache.txt  CMakeLists.txt  LibuvcExample  LibuvcExample.cpp  Makefile  cmake_install.cmake
OpenCVPlaying/: firstshot.py  pepepepepe.py  twocams.py
autoregression/: autoregression.py  misc.py
basicMLSystem/: basicMLpi.py  position.py  regression.py
build-GetThermal-Desktop-Release/: Makefile
dataLogger/: 2017-04-19 15:38:45.817752.txt  2017-04-20 11:40:46.764284.txt  dataLogger.py  myfile
learning_joy/: CMakeLists.txt~  package.xml
linearRegression/: linReg.py
superimpose/: CMakeCache.txt  CMakeLists.txt  Makefile  SuperImpose  cmake_install.cmake  superimpose.cpp
(+79 files in other folders)
